# metacam-viewer

./: .gitignore  README.md  calib.py  cv.py  info_main.py  main,sh  main.py  main.sh  main2.py  package-lock.json  package.json  pp.sh  processing.py  reader.py  requirements.txt  test2.py  video_main.py  viewer_main.py
3Dviewer/: main.py
fisheye_ws/: fast_lio2.rviz  run.launch  run.sh
fisheye_ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
fisheye_ws/devel/share/data_preprocessing/cmake/: data_preprocessing-msg-extras.cmake  data_preprocessing-msg-paths.cmake  data_preprocessingConfig.cmake
fisheye_ws/devel/share/fast_lio/cmake/: fast_lio-msg-extras.cmake  fast_lio-msg-paths.cmake  fast_lioConfig.cmake
fisheye_ws/src/FAST_LIO-main/launch/: edu.launch  edu_tower.launch  ours.launch
fisheye_ws/src/FAST_LIO-main/rviz_cfg/: loam_livox.rviz
fisheye_ws/src/FAST_LIO-main/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
fisheye_ws/src/data_preprocessing/include/: main.h
fisheye_ws/src/data_preprocessing/src/: filter.py  main.cpp
fisheye_ws/src/lidar_add_rgb/: CMakeLists.txt  package.xml
fisheye_ws/src/lidar_add_rgb/include/: main.h
fisheye_ws/src/lidar_add_rgb/launch/: lidar_add_rgb_fast_lio2.launch  lidar_add_rgb_fast_lio2_tower.launch  lidar_add_rgb_fast_livo.launch  lidar_add_rgb_lvi_sam.launch
fisheye_ws/src/lidar_add_rgb/src/: main.cpp
frontend/: main.js  package-lock.json  package.json  preload.js
frontend/src/: App.js
output/: calibration.json
spts/: pp.sh
(+10 files in other folders)
